silence-cloud v.1.0.1-SNAPSHOT add StatusModel and StatusRepository

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -291,12 +291,14 @@ play.filters {
 # ~~~~~
 # Evolutions allows database scripts to be automatically run on startup in dev mode
 # for database migrations. You must enable this by adding to build.sbt:
-#
-# libraryDependencies += evolutions
+#libraryDependencies += evolutions
 #
 play.evolutions {
   # You can disable evolutions for a specific datasource if necessary
-  #db.default.enabled = false
+  db.default.enabled = true
+  db.default.autoApply=true
+  db.default.autoApplyDowns=true
+
 }
 
 ## Database Connection Pool
