--- a/modules/core/conf/application.conf
+++ b/modules/core/conf/application.conf
@@ -318,8 +318,8 @@ play.db {
   # settings by changing the prototype:
   prototype {
     # Sets a fixed JDBC connection pool size of 50
-    hikaricp.minimumIdle = 50
-    hikaricp.maximumPoolSize = 50
+    #hikaricp.minimumIdle = 50
+    #hikaricp.maximumPoolSize = 50
   }
 }
 
