--- a/conf/application.conf
+++ b/conf/application.conf
@@ -364,3 +364,14 @@ database.dispatcher {
 ebean.default = ["models.*"]
 
 db.default.migration.locations=["common","h2"]
+
+play.mail {
+  host = "example.com" // (mandatory)
+  auth = true
+  port = 25 // (defaults to 25)
+  ssl = no // (defaults to no)
+  tls = no // (defaults to no)
+  tlsRequired = no // (defaults to no)
+  username = null // (optional)
+  password = null // (optional)
+}
